fix/create button had wrong width

--- a/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
+++ b/docker/advocase-image/build-files/suitecrm/core/app/shell/src/themes/suite8/css/layout/_navbar.scss
@@ -282,6 +282,7 @@ a.nav-link-nongrouped.dropdown-toggle::after {
 }
 
 .primary-global-link.custom-create {
+  width: 113px;
   background-color: $white;
   margin: 0.5em 0;
   padding: 0.5em 1em;
